--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TO D0 LIST</title>
-    <link rel="stylesheet" href="to-do-list.css" />
+    <link rel="stylesheet" href="to-do-list.css"/>
 </head>
 
 <body>
@@ -41,7 +41,6 @@
         let headerDiv = document.getElementById('header-div');
         let date = new Date();
 
-        timeContainer.textContent = `${date.getHours()}:${date.getMinutes()}:${date.getSeconds()}`;
         headerDiv.appendChild(timeContainer);
 
         let header = document.querySelector('.heading');
@@ -60,6 +59,31 @@
             }
         })
 
+        let startTime = new Date().getTime() / 1000;
+        let seconds = 0;
+        let intervalId;
+
+        function startTimer() {
+            seconds = startTime;
+            intervalId = setInterval(() => {
+                seconds++;
+                displayTime();
+            }, 1000);
+        }
+
+        function stopTimer() {
+            clearInterval(intervalId);
+        }
+
+        function displayTime() {
+            const date = new Date(seconds * 1000);
+            const hours = date.getHours().toString().padStart(2, '0');
+            const minutes = date.getMinutes().toString().padStart(2, '0');
+            const secondsDisplay = date.getSeconds().toString().padStart(2, '0');
+            timeContainer.innerText = `${hours}:${minutes}:${secondsDisplay}`;
+        }
+
+        startTimer();
         function addTask() {
             if (taskInput.value == "") {
                 alert("Please enter a task");
